assets/css/style.css
/* #region common */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Poppins;
    min-width: 1440px;
}

img {
    max-width: 100%;
}

a {
    text-decoration: none;
}

h3 {
    font-size: 1.5rem;
}

:root {
    --drop-primary: #0061ff;
    --drop-secondary: #b4d0e7;
    --drop-colored: #61082c;
    --drop-light: #ffffff;
    --drop-dark: #000000;
    --drop-hovered: #003283;
}

/* #endregion common */

/* #region debug */
.debug *{
    border: 1px dashed;
}

.debug {
    header {
        max-height: 60px;
    }
}

/* #endregion debug */

/* #region utilities */
.container {
    width: 60%;
    margin: auto;
}

.container-lg {
    width: 70%;
    margin: auto;
}

.d-flex {
    display: flex;
}

.row {
    display: flex;
    margin: 0 -1rem;
    flex-wrap: wrap;
}

[class^="col-"] {
    padding: 1rem;
}

.align-items-center {
    align-items: center;
}

.justify-content-end {
    justify-content: end;
}

.list-unstyled {
    list-style: none;
}

.btn {
    padding: 0.5rem 1rem;
    background-color: var(--drop-primary);
    border-style: none;
    color: var(--drop-light);
    text-align: center;

    a {
        color: var(--drop-light);
    }

    &:hover {
        background-color: var(--drop-hovered);
    }

}

.btn-lg {
    padding: 0.6rem 1rem;
}

/* columns */
.col-1 {
    width: calc(100% / 12 * 1);
}

.col-2 {
    width: calc(100% / 12 * 2);
}

.col-3 {
    width: calc(100% / 12 * 3);
}

.col-4 {
    width: calc(100% / 12 * 4);
}

.col-5 {
    width: calc(100% / 12 * 5);
}

.col-6 {
    width: 50%;
}

.col-7 {
    width: calc(100% / 12 * 7);
}

.col-8 {
    width: calc(100% / 12 * 8);
}

.col-9 {
    width: calc(100% / 12 * 9);
}

.col-10 {
    width: calc(100% / 12 * 10);
}

.col-11 {
    width: calc(100% / 12 * 11);
}

.col-12 {
    width: 100%;
}

/* #endregion utilities */


/* #region header */
header {
    padding: 1rem 0.5rem;
    position: sticky;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
    background-color: var(--drop-light);
    box-shadow: 0 2px 2px grey;

    a {
        color: var(--drop-dark);
        font-size: 0.8rem;
    }

    
    .left {
        width: 50%;
        
        .logo, .left_menu {
            padding-left: 1rem ;
        }

        li {
            padding-right: 1rem;
        }

    }

    .right {
        width: 50%;
        padding-right: 1rem;

        .right_menu {
            padding-right: 1rem;
        }

        li {
            padding-left: 1rem;
        }

    }

}

/* #endregion header */

/* #region main */
main {

    section {
        padding: 2rem 0;
    }

    section#jumbo {
        background-color: var(--drop-secondary);
        padding-top: 3rem;
        margin-bottom: 6rem;


        .container-lg {
            margin-bottom: -8rem;
        }
    
        h1 {
            font-size: 4rem;
            padding-bottom: 2rem;
        }
    
        .col-4 button {
            margin: 2rem 0;
        }
        
        .col-4 .down-arrow>a>i {
            margin: 20% 3%;
            transform: scale(3);
            color: var(--drop-dark);
        }
    
    }

    section#plans {

        h2 {
            font-size: 2.5rem;
            padding-bottom: 2rem;
        }

        .radio_buttons label {
            margin-right: 3rem;
            margin-left: 0.2rem;
        }

        .row {
            padding-top: 1rem;
        }

        .card {
            font-size: 0.9rem;
            border: 1px solid #ededed;
            height: 100%;

            .card_top {
                text-align: center;
                border-top: 2px solid lightgrey;
                border-bottom: 2px solid lightgrey;
                padding: 0.5rem 0;
            }

            .card_middle {
                

                .price {
                    font-weight: bold;
                }

                .payment_period {
                    font-size: 0.7rem;
                    margin-bottom: 2rem;
                }

                .card_left {
                    width: 1.5rem;
                }

                & i {
                    padding-right: 0.5rem;
                }

                .btn {
                    margin: 1rem 0;
                }
                
                .or_else a {
                    text-decoration: underline;
                }

            }

            .card_middle, .card_bottom {
                padding: 1rem 2rem;

                & div {
                    padding-top: 0.5rem;
                }
            }
            
            .card_bottom {

                ul {
                    margin-left: 1.3rem;
                }
    
                ul .fa-li i {
                    color: var(--drop-primary);
                }   
    
                ul.fa-ul li {
                    padding-top: 1rem;
                }

            }

        }



        #sell_office {

            .col-8 {
                padding-left: 3rem;
            }

            div.btn {
                margin: 0 2.2rem;           
            }


        }

    }

}

/* #endregion main */

/* #region footer */


/* #endregion footer */

